--- a/app/templates/instances/detail.html
+++ b/app/templates/instances/detail.html
@@ -133,7 +133,7 @@
                         <div class="mb-3">
                             <label class="form-label fw-bold">创建时间</label>
                             <p class="form-control-plaintext">
-                                {{ instance.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
+                                {{ instance.created_at | china_datetime }}
                             </p>
                         </div>
                     </div>
