--- a/app/templates/accounts/history.html
+++ b/app/templates/accounts/history.html
@@ -80,8 +80,8 @@
                     <tr>
                         <td>
                             <div>
-                                <strong>{{ record.sync_time.strftime('%Y-%m-%d') }}</strong>
-                                <br><small class="text-muted">{{ record.sync_time.strftime('%H:%M:%S') }}</small>
+                                <strong>{{ record.sync_time | china_date }}</strong>
+                                <br><small class="text-muted">{{ record.sync_time | china_time('%H:%M:%S') }}</small>
                             </div>
                         </td>
                         <td>
