--- a/app/templates/errors/error.html
+++ b/app/templates/errors/error.html
@@ -45,8 +45,8 @@
                     {% endif %}
                     
                     <div class="mt-4">
-                        <a href="{{ url_for('main.index') }}" class="btn btn-primary me-2">
-                            <i class="fas fa-home me-2"></i>返回首页
+                        <a href="{{ url_for('auth.login') }}" class="btn btn-primary me-2">
+                            <i class="fas fa-sign-in-alt me-2"></i>返回登录
                         </a>
                         <button onclick="history.back()" class="btn btn-outline-secondary">
                             <i class="fas fa-arrow-left me-2"></i>返回上页
